--- a/code/tests/robot/visitor_language_switch_tests/report.html
+++ b/code/tests/robot/visitor_language_switch_tests/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,17367],[],[[4,0,0,[],[1,688,16677],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,381167],[],[[4,0,0,[],[1,4172,2053],[]],[5,0,0,[],[1,6226,5188],[]],[6,0,0,[],[1,11416,3118],[]],[7,0,0,[],[1,14536,32386],[]],[8,0,0,[],[1,46923,16192],[]],[9,0,0,[],[1,63116,48381],[]],[10,0,0,[],[1,111498,8403],[]],[11,0,0,[],[1,119902,7581],[]],[12,0,0,[],[1,127483,3833],[]],[13,0,0,[],[1,131318,10198],[]],[14,0,0,[],[1,141516,31907],[]],[15,0,0,[],[1,173424,14239],[]],[16,0,0,[],[1,187664,48489],[]],[17,0,0,[],[1,236155,8431],[]],[18,0,0,[],[1,244587,6826],[]],[19,0,0,[],[1,251414,3627],[]],[20,0,0,[],[1,255044,10205],[]],[21,0,0,[],[1,265250,31988],[]],[22,0,0,[],[1,297239,14092],[]],[23,0,0,[],[1,311332,48304],[]],[24,0,0,[],[1,359637,8535],[]],[25,0,0,[],[1,368172,6792],[]],[26,0,0,[],[1,374964,3586],[]]],[],[23,23,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Visitor Lang Switch","*D:\\SE_2567_126-0\\group_project\\git-group-repository-group-3-sec-1\\code\\tests\\robot\\visitor_language_switch_tests\\visitor_lang_switch.robot","*visitor_lang_switch.robot","*Verify Language Switch to Chinese"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Visitor Lang Switch2","*D:\\SE_2567_126-0\\group_project\\git-group-repository-group-3-sec-1\\code\\tests\\robot\\visitor_language_switch_tests\\visitor_lang_switch2.robot","*visitor_lang_switch2.robot","*Verify Language Switcher Presence","*Verify Language Options Display","*Verify English Home Page","*Verify English Researchers Navigation","*Verify English Researcher Profile","*Verify English Publication Tabs","*Verify English Research Project Page","*Verify English Research Group Page","*Verify English Reports Page","*Verify Thai Home Page","*Verify Thai Researchers Navigation","*Verify Thai Researcher Profile","*Verify Thai Publication Tabs","*Verify Thai Research Project Page","*Verify Thai Research Group Page","*Verify Thai Reports Page","*Verify Chinese Home Page","*Verify Chinese Researchers Navigation","*Verify Chinese Researcher Profile","*Verify Chinese Publication Tabs","*Verify Chinese Research Project Page","*Verify Chinese Research Group Page","*Verify Chinese Reports Page"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"Visitor Lang Switch","name":"Visitor Lang Switch","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:06:14","fail":0,"label":"All Tests","pass":23,"skip":0}],[],[{"elapsed":"00:06:21","fail":0,"id":"s1","label":"Visitor Lang Switch2","name":"Visitor Lang Switch2","pass":23,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1741448401813;
+window.output["baseMillis"] = 1741639410386;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17394;
+window.output["generated"] = 381213;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
