--- a/code/tests/robot/login_language_switch_tests/report.html
+++ b/code/tests/robot/login_language_switch_tests/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,43429],[],[[4,0,0,[],[1,458,42971],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,26683],[],[[4,0,0,[],[1,4008,4081],[]],[5,0,0,[],[1,8090,8037],[]],[6,0,0,[],[1,16128,7767],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*D:\\SE_2567_126-0\\group_project\\git-group-repository-group-3-sec-1\\code\\tests\\robot\\login_language_switch_tests\\login.robot","*login.robot","*Test Language Switching"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*D:\\SE_2567_126-0\\group_project\\git-group-repository-group-3-sec-1\\code\\tests\\robot\\login_language_switch_tests\\login.robot","*login.robot","*Test Default Language","*Test Language Switching to Thai","*Test Language Switching to Chinese"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:43","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:43","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"Login","name":"Login","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1740509450929;
+window.output["baseMillis"] = 1741721176424;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 43445;
+window.output["generated"] = 26711;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
